--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
