--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_BACKEND_URL=https://nodejs-todo-list-01-33be4a4b4592.herokuapp.com
+REACT_APP_BACKEND_URL=http://localhost:5000
+# REACT_APP_BACKEND_URL=https://nodejs-todo-list-01-33be4a4b4592.herokuapp.com
+
